wwr/styles/rafting.css
@import url('https://fonts.googleapis.com/css2?family=Braah+One&family=Quicksand:wght@300;500;700&display=swap');


:root {
    --primary-color: #49516F;
    --secondary-color: #8EA4D2;
    --accent1-color: #6279B8;
    --accent2-color: #496F5D;

    --heading-font: 'Braah One', sans-serif;
    --paragraph-font: 'Quicksand', sans-serif;

    --nav-background-color: #49516F;
    --nav-link-color: #FFFFFF;
    --nav-hover-link-color: #49516F;
    --nav-hover-background-color: #FFFFFF;
}

p { 
    font-family: var(--paragraph-font);
    color: var(--primary-color);
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

a {
    text-decoration: none;
}

body {
    max-width: 1200px;
    margin: auto;
}

.headerNav nav ul{
    list-style-type: none;
    font-family: var(--paragraph-font);
    background-color: var(--nav-background-color);
    display: flex;
    padding: 10px;
    justify-content: space-evenly;
}

header {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    justify-content: space-around;
    align-items: center;
    padding: 20px;
}

.headerNav {
    display: grid;
    grid-column: 2 / 6;
}

.headerNav ul li {
    padding: 10px;
}

.headerNav nav ul li a {
    color: var(--nav-link-color);
    justify-content: space-around;
    padding: 20px;
}

.headerNav nav ul li a:hover {
    background-color: var(--nav-hover-background-color);
}

.headerNav nav ul li a:hover {
    color: var(--nav-hover-link-color);
}

.heroImg {
    max-width: 1200px;
    display: block;
    width: 100%;
    height: auto;
}

.hero h1, article {
    position: absolute;
}

.hero h1 {
    top: 300px;
    left: 352px;
    color: white;
    font-size: 75px;
    margin: auto;
    background-color: rgba(25, 25, 25, 0.8);
    width: 1200px;
    text-align: center;
    padding-top: 20px;
}

.hero article {
    max-width: 1000px;
    background-color: rgba(78,175,187,0.8);
    top: 500px;
    left: 425px;
    padding: 15px;
}

.hero article p {
    color: white;
}

.hero article img {
    width: 200px;
    float: right;
}

.historyH1 {
    text-align: center;
}

.historySection {
    display: flex;
}

.historyImg {
    width: 400px;
    padding-left: 50px;
}

.adventureImages {
    display: flex;
    justify-content: space-evenly;
}

.adventureH1 {
    text-align: center;
}

.adventureImages img {
    display: flex;
    align-items: center;
    width: 200px;
    height: auto;
    padding: 10px;
}

.adventureImages figcaption {
    text-align: center;
}

footer {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(5, 1fr)
}

.footerLinks {
    grid-column: 5 / 6;
    display: flex;
    justify-content: center;
}

.copyright {
    grid-column: 3 / 5;
}

footer p {
    text-align: center;
}

footer ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
}

footer li {
    padding: 20px;
}

footer li img {
    width: 50px;
}

.frameCircle {
    width:150px;
    height: 150px;
    background-color: white;
    overflow: hidden;
    border-radius: 100px;
}

.employee1 {
    position: relative;
    top: 10px;
    right: 110px;
    width: 420px;
    height: auto;
}

.employee2 {
    position: relative;
    bottom: 40px;
    right: 110px;
    width: 350px;
    height: auto;
}

.employee3 {
    position: relative;
    bottom: 20px;
    right: 50px;
    width: 250px;
    height: auto;
}

.employeeGroup {
    width: 150px;
    line-height: 4px;
    text-align: center;
}

.happyEmployeePics {
    display: flex;
    justify-content: space-around;
    margin: 50px;
}

form {
    width: 800px;
    display: flex;
    flex-direction: column;
    text-align: center;
    margin: 0 auto;
    display: flex;
}

input[type="text"], textarea, input[type="checkbox"], input[type="radio"], label, input[type="email"] {
    font-family: 'Quicksand', sans-serif;
    padding: 10px;
    margin: 10px;
}

.contactH2 {
    text-align: center;
}

.formRadio {
    display: flex;
    flex-direction: column;
}

form button {
    border-radius: 20px;
    background-color: rgb(9, 67, 114);
    border: none;
    color: white;
    height: 45px;
    width: 150px;
}

